--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "react-children-utilities": "^2.6.3"
   }
 }
