--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
+    "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vkui": "^4.20.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
