--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
-    "downlevelIteration": true
+    "skipLibCheck": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "lib"]
