--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.2.0",
   "private": false,
   "description": "🔪 Многофункциональный роутер для приложений на React и VKUI",
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "source": "src/index.ts",
+  "types": "lib/index.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.module.js",
+  "unpkg": "lib/index.umd.js",
   "repository": "https://github.com/cteamdev/router",
-  "author": "ItzNeviKat",
+  "author": "Nikita Koshelenko <nikitakoschelenko@gmail.com>",
   "license": "MIT",
   "files": [
     "/lib"
   ],
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
+    "prebuild": "rimraf lib/",
+    "build": "microbundle --jsx React.createElement --no-sourcemap --compress",
     "prepublish": "yarn build"
   },
   "devDependencies": {
@@ -28,16 +29,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   },
   "peerDependencies": {
-    "@vkontakte/icons": "^1.135.0",
     "@vkontakte/vk-bridge": "^2.4.8",
     "@vkontakte/vkui": "^4.22.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "microbundle": "^0.14.2",
     "querystring": "^0.2.1",
     "react-children-utilities": "^2.6.3"
   }
